// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Internal /> renders clean correctly 1`] = `
.c0 {
  background-image: unset;
  background-position: 0 1.07em;
  background-repeat: repeat-x;
  background-size: 2px 0.1em;
  color: currentColor;
  font-size: unset;
  text-decoration: none;
}

<Link
  className="c0"
  clean={true}
  replace={false}
  size="unset"
  to="/url"
>
  Text
</Link>
`;

exports[`<Internal /> renders correctly 1`] = `
.c0 {
  background-image: linear-gradient(transparent 50%, currentColor 50%);
  background-position: 0 1.07em;
  background-repeat: repeat-x;
  background-size: 2px 0.1em;
  color: currentColor;
  font-size: unset;
  text-decoration: none;
}

<Link
  className="c0"
  clean={false}
  replace={false}
  size="unset"
  to="/url"
>
  Text
</Link>
`;

exports[`<Internal /> renders size correctly 1`] = `
.c0 {
  background-image: linear-gradient(transparent 50%, currentColor 50%);
  background-position: 0 1.07em;
  background-repeat: repeat-x;
  background-size: 2px 0.1em;
  color: currentColor;
  font-size: 16px;
  text-decoration: none;
}

<Link
  className="c0"
  clean={false}
  replace={false}
  size="16px"
  to="/url"
>
  Text
</Link>
`;
